--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Roboto Condesed" sans-serif ;
+  font-family: "Roboto Condensed" sans-serif !important ;
 }
 
 /******* NAVBAR ******/
@@ -65,7 +65,6 @@ nav ul li {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: "Roboto Condesed" sans-serif ;
   text-transform: uppercase;
   z-index: 1;
 }
@@ -117,5 +116,30 @@ nav ul li {
 @media(max-width: 768px) {
   .particles-canvas {
     display: none;
+  }
+}
+
+/******* ABOUT ME ******/
+.photo-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-img {
+  width: 16rem;
+  border-radius: 50%;
+  padding: .3rem;
+  border: 1px solid var(--primary-orange);
+}
+
+.about-heading {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+}
+
+@media(max-width: 460px) {
+  .profile-img {
+    width: 10rem;
   }
 }
