--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --primary-dark: rgb(52,58,64);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501;
+  --primary-black: #000000;
 }
 
 body {
@@ -131,7 +132,7 @@ nav ul li {
 
 .profile-img {
   width: 10rem;
-  border-radius: 50%;
+  border-radius: 40%;
   padding: .3rem;
   border: 1px solid var(--primary-orange);
 }
@@ -184,6 +185,7 @@ nav ul li {
   padding: 0.635rem;
   margin-bottom: 1.875rem;
   background: var(--primary-white);
+  transition: 0.3s ease-in-out;
 }
 
 .services .box:hover {
@@ -290,5 +292,100 @@ nav ul li {
     float: none;
     direction: ltr;
     width: 100%;
+  }
+}
+
+/******* PORTFOLIO ******/
+.portfolio-wrapper {
+  background: var(--primary-light-grey);
+  padding: 3rem, 0;
+}
+
+.portfolio-wrapper h1 {
+  color: var(--primary-orange)
+}
+
+.portfolio-img {
+  width: 15rem;
+  border: 1px solid var(--primary-orange);
+  padding: 0 0.5rem;
+}
+
+.portfolio-img-box {
+  position: relative;
+  margin: 2rem;
+}
+
+/******* OVERFLOW ******/
+.overflow {
+  position: absolute;
+  opacity: 0;
+  background: var(--primary-black);
+  width: 15rem;
+  height: 8rem;
+  top: 0;
+  border: 1px solid var(--primary-red);
+  cursor: pointer;
+}
+
+.portfolio-img-box:hover .overflow {
+  opacity: 60%;
+  transition: 0.3s ease-in-out;
+}
+
+.portfolio-icon {
+  position: absolute;
+  opacity: 0;
+  margin-left: -8rem;
+  margin-top: 3.6rem;
+  color: var(--primary-orange);
+  font-size: 1.5rem;
+}
+
+.portfolio-img-box:hover .portfolio-icon {
+  opacity: 70%;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+/******* OVERFLOW ******/
+.portfolio-image-popupbox {
+  width: 45rem;
+  padding: 0 0.5rem;
+}
+
+.hyper-link {
+  cursor: pointer;
+  color: var(--primary-orange)
+}
+
+.hyper-link:hover {
+  color: var(--primary-red)
+}
+
+/******* Media ******/
+@media(max-width: 768px) {
+  .portfolio-image-popupbox {
+    width: 100%;
+  }
+}
+
+@media(max-height: 570px) {
+  .portfolio-wrapper {
+    height: 100%;
+  }
+
+  .portfolio-image-popupbox {
+    width: 50%;
+  }
+}
+
+@media(max-height: 280px) {
+  .portfolio-wrapper {
+    height: 90%;
+  }
+
+  .portfolio-image-popupbox {
+    width: 30%;
   }
 }
