Contact me completed

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   --primary-red: #ef4035;
   --primary-hover-red: #f33501;
   --primary-black: #000000;
+  --primary-green: green;
 }
 
 body {
@@ -23,6 +24,7 @@ nav {
 
 .logo {
   height: 60px;
+  border-radius: 50%;
 }
 
 nav a.nav-link {
@@ -140,6 +142,19 @@ nav ul li {
 .about-heading {
   color: var(--primary-orange);
   text-transform: uppercase;
+}
+
+.name {
+  position: inherit;
+  color: purple;
+  margin-left: 11rem;
+}
+
+@media(max-width: 768px) {
+  .name {
+    width: 100%;
+    margin-left: 5rem;
+  }
 }
 
 @media(max-width: 460px) {
@@ -363,7 +378,7 @@ nav ul li {
   color: var(--primary-red)
 }
 
-/******* Media ******/
+/******* MEDIA ******/
 @media(max-width: 768px) {
   .portfolio-image-popupbox {
     width: 100%;
@@ -387,5 +402,100 @@ nav ul li {
 
   .portfolio-image-popupbox {
     width: 30%;
+  }
+}
+
+/******* CONTACTS ******/
+.contacts {
+  background: var(--primary-dark);
+  padding: 3rem 0;
+}
+
+.contacts h1 {
+  color: var(--primary-orange);
+  padding: 1.3rem 0;
+  text-transform: uppercase;
+}
+
+.contacts p {
+  color: var(--primary-light-grey);
+  font-size: 1.2rem;
+}
+
+/******* Inputs ******/
+.contacts input, .contacts textarea {
+  width: 100%;
+  box-sizing: border-box;
+  background: none;
+  resize: none;
+  border: 0;
+  border-bottom: 0.125rem solid var(--primary-dark-grey);
+  color: var(--primary-orange);
+  outline: 0 !important;
+  box-shadow: none !important;
+  margin-bottom: 1rem;
+  padding-left: 0 !important;
+}
+
+.contacts .container {
+  padding: 4rem 0;
+}
+
+.contacts input:focus, .contacts textarea:focus {
+  background: transparent;
+  color: var(--primary-orange);
+  border-bottom: 0.125rem solid var(--primary-dark-grey);
+}
+
+.contacts textarea {
+  height: 8.6rem !important;
+}
+
+.contact-btn {
+  width: 100%;
+  margin: 1rem 0 0 0;
+  background: none;
+}
+
+.line {
+  position: relative;
+  top: -0.8rem;
+  width: 0;
+  height: 0.125rem;
+  background: var(--primary-orange);
+  display: inline-block;
+}
+
+input:focus+.line {
+  width: 100%;
+  transition: width 0.3s ease-in-out;
+}
+
+input.form-control {
+  margin: -0.3rem 0;
+}
+
+.error-message {
+  color: var(--primary-white);
+  background: var(--primary-hover-red);
+  text-align: left;
+}
+
+.success-message {
+  font-weight: 900;
+  color: var(--primary-green);
+}
+
+@media(max-width: 768px) {
+  .contacts {
+    overflow: hidden;
+  }
+
+  .contacts .container {
+    padding: 0 1rem;
+  }
+
+  .contacts p {
+    padding: 0 0.4rem;
   }
 }
