--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ nav ul li {
   border-top: 0.1875rem solid var(--primary-dark);
 }
 
-.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
+.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
   border-top: 0.1875rem solid var(--primary-orange);
 }
 
@@ -57,7 +57,7 @@ nav ul li {
   background: url(118628765600433--web-design-portfolio-background.jpeg) no-repeat;
   background-size: cover;
   background-position: center;
-  height: 90vh;
+  height: 100vh;
 }
 
 .main-info {
@@ -145,7 +145,7 @@ nav ul li {
 }
 
 .name {
-  position: inherit;
+ 
   color: purple;
   margin-left: 11rem;
 }
@@ -363,6 +363,10 @@ nav ul li {
   cursor: pointer;
 }
 
+.portfolio-wrapper {
+  margin-top: 7rem;
+}
+
 /******* OVERFLOW ******/
 .portfolio-image-popupbox {
   width: 45rem;
@@ -498,4 +502,25 @@ input.form-control {
   .contacts p {
     padding: 0 0.4rem;
   }
+}
+
+/******* FOOTER COMPONENT ******/
+.footer {
+  background: var(--primary-black);
+  color: var(--primary-dark-grey);
+  padding: 3rem;
+}
+
+.footer a {
+  text-decoration: none;
+  color: var(--primary-dark-grey);
+  cursor: pointer;
+}
+
+.footer a:hover {
+  color: var(--primary-orange);
+}
+
+.footer p {
+  margin-bottom: 0;
 }
